--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -81,15 +81,15 @@
 			</div>
 			<div mat-button class="mat-button" [routerLink]="['/stopWords']" skipLocationChange routerLinkActive="active" (click)="preview('stopWords')" mat-button>
 				<span class="inlineIconBox leftAdjust">
-					<img src="assets/icons/sidemenu/new-icons/stop-words.svg" class="defaultIcon">	
-					<img src="assets/icons/sidemenu/new-icons/stop-words.svg" class="activeIcon">				
+					<img src="assets/icons/sidemenu/new-icons/ml.svg" class="defaultIcon">	
+					<img src="assets/icons/sidemenu/new-icons/ml-active.svg" class="activeIcon">			
 				</span>
 				<span class="linkTitle">Stop Words</span>
 			</div>
 			<div mat-button class="mat-button" [routerLink]="['/resultranking']" skipLocationChange routerLinkActive="active" (click)="preview('resultranking')" mat-button>
 				<span class="inlineIconBox leftAdjust">
-					<img src="assets/icons/sidemenu/new-icons/weights.svg" class="defaultIcon">	
-					<img src="assets/icons/sidemenu/new-icons/weights.svg" class="activeIcon">				
+					<img src="assets/icons/sidemenu/new-icons/demo.svg" class="defaultIcon">	
+					<img src="assets/icons/sidemenu/new-icons/demo-active.svg" class="activeIcon">				
 				</span>
 				<span class="linkTitle">Results Ranking</span>
 			</div>
@@ -107,7 +107,7 @@
 					</span>
 					<span class="linkTitle">Rules & Personalization</span>
 			</div>
-			<div mat-button class="mat-button" [routerLink]="['/query']" skipLocationChange routerLinkActive="active" (click)="preview('query')" mat-button>			
+			<!-- <div mat-button class="mat-button" [routerLink]="['/query']" skipLocationChange routerLinkActive="active" (click)="preview('query')" mat-button>			
 				<span class="inlineIconBox">	
 					<img src="assets/icons/sidemenu/new-icons/query.svg" class="defaultIcon">	
 					<img src="assets/icons/sidemenu/new-icons/query-active.svg" class="activeIcon">			
@@ -135,7 +135,7 @@
 					<img src="assets/icons/sidemenu/new-icons/general-settings-active.svg" class="activeIcon">				
 				</span>
 				<span class="linkTitle">General Settings</span>
-			</div>
+			</div> -->
 
 		<!-- <div mat-button class="mat-button settings-menu">
 			<span class="inlineIconBox">
