--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -531,3 +531,32 @@
         display: none;
     }
 }
+.empty-list{
+    width: 320px;
+    margin: 0 auto;
+    // height: calc(100% - 60px);
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;                       
+    -webkit-box-pack: center;                       
+    -ms-flex-pack: center;                       
+    justify-content: center;   
+    height: calc(100% - 146px);
+    img{
+        width: 75%;
+        margin: 0 auto;
+    }     
+    .heading{
+        margin: 18px 0 8px 0;
+        color: $primaryColor;
+    }
+    .desc{
+        color: $secondaryColor;
+        font-size: 14px;
+    }
+} 
