--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -93,7 +93,7 @@
 				</span>
 				<span class="linkTitle">Results Ranking</span>
 			</div>
-			<div mat-button class="mat-button" [routerLink]="['/attributes']" skipLocationChange routerLinkActive="active" (click)="preview('synonyms')" mat-button>
+			<div mat-button class="mat-button" [routerLink]="['/facets']" skipLocationChange routerLinkActive="active" (click)="preview('synonyms')" mat-button>
 				<span class="inlineIconBox">
 					<img src="assets/icons/sidemenu/new-icons/attributes.svg" class="defaultIcon">	
 					<img src="assets/icons/sidemenu/new-icons/attributes-active.svg" class="activeIcon">				
