--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -798,8 +798,8 @@ and open the template in the editor.
                 content: '';
                 display: inline-block;
                 vertical-align: middle;
-                width: 16px;
-                height: 16px;
+                width: 18px;
+                height: 18px;
                 top: 0;
                 padding: 0;
                 margin-right: 12px;
@@ -2002,7 +2002,7 @@ and open the template in the editor.
         background-color: $whiteColor;
         color: $primaryColor;
         border-radius: 4px;
-        padding: 4px 25px 4px 10px;
+        padding: 4px 10px 4px 35px;
         height: 34px;
         line-height: 34px;
         width: 100%;
@@ -2025,10 +2025,8 @@ and open the template in the editor.
     }
     .search-icon{
         position: absolute;
-        right: 10px;
-        top: 9px;
-        // width: 12px;
-        // height: 12px;
+        left: 11px;
+        top: 10px;        
         cursor: pointer;
     }
 }
